--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = "A lightweight, no-nonsense SSH intrusion detection system using journald and ufw."
 readme = "README.md"
 authors = [
-  { name = "Yash Potdar", email = "yashyogeshpotdar-py" },
+  { name = "Yash Potdar", email = "yashyogeshpotdar7@gmail.com" },
 ]
 license = { file = "LICENSE" }
 classifiers = [
